fixed hr line on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,10 +91,3 @@ tr,td,thead, tbody{
     transition: right .5s ease-in;
 }
 
-/* video{
-    width: 100%;
-    height: 100%;
-    display: block;
-    overflow: hidden;
-    margin-top: -100%;   
-} */
